--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^2.5.1",
     "cra-template-typescript": "1.2.0",
     "react": "^18.0.0",
     "react-datepicker": "^8.0.0",
     "react-dom": "^18.0.0",
+    "react-redux": "^9.2.0",
     "react-scripts": "5.0.1"
   },
   "scripts": {
@@ -32,5 +34,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-redux": "^7.1.34"
   }
 }
