--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,14 @@
 version: '3'
+
 services:
   web:
     build: .
+    container_name: news-aggregator
     ports:
       - "3000:3000"
     volumes:
-      - .:/app
+      - .:/usr/src/app
+      - /usr/src/app/node_modules  # Prevents overwriting node_modules
     environment:
       - CHOKIDAR_USEPOLLING=true
+      - WATCHPACK_POLLING=true 
