--- a/package.json
+++ b/package.json
@@ -4,18 +4,21 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.1",
+    "axios": "^1.7.9",
     "cra-template-typescript": "1.2.0",
     "react": "^18.0.0",
     "react-datepicker": "^8.0.0",
-    "react-dom": "^18.0.0",
+    "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
-    "react-scripts": "5.0.1"
+    "web-vitals": "^4.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
+    "stop": "docker compose down",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "docker-reset": "docker rm -f $(docker ps -a -q) ; docker volume rm $(docker volume ls -q) ; docker rmi $(docker images -q)"
   },
   "eslintConfig": {
     "extends": [
@@ -36,6 +39,9 @@
     ]
   },
   "devDependencies": {
-    "@types/react-redux": "^7.1.34"
+    "@types/axios": "^0.9.36",
+    "@types/react-dom": "^19.0.3",
+    "@types/react-redux": "^7.1.34",
+    "react-scripts": "^5.0.1"
   }
 }
