--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,10 @@ services:
       - "3000:3000"
     volumes:
       - .:/usr/src/app
-      - /usr/src/app/node_modules  # Prevents overwriting node_modules
+      - /usr/src/app/node_modules 
     environment:
       - CHOKIDAR_USEPOLLING=true
       - WATCHPACK_POLLING=true 
+      - REACT_APP_NEWSAPI_KEY=d9dc5f3e262d471e97f697b5e9512e9b
+      - REACT_APP_GUARDIAN_API_KEY=fbf5ffe3-54c0-4142-bd6a-d131303ada4e
+      - REACT_APP_NYT_API_KEY=NtXTS3AtE0K9oEDAVuFt1T3UtYJm6zju
