--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "react": "^18.0.0",
     "react-datepicker": "^8.0.0",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
+    "react-select": "^5.10.0",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "stop": "docker compose down",
-    "build": "react-scripts build",
+    "build": "docker-compose up --build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "docker-reset": "docker rm -f $(docker ps -a -q) ; docker volume rm $(docker volume ls -q) ; docker rmi $(docker images -q)"
