--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@reduxjs/toolkit": "^2.5.1",
     "axios": "^1.7.9",
     "cra-template-typescript": "1.2.0",
+    "notistack": "^3.0.2",
     "react": "^18.0.0",
     "react-datepicker": "^8.0.0",
     "react-dom": "^18.3.1",
